--- a/main.css
+++ b/main.css
@@ -2,3 +2,15 @@ body {
     background-color: black;
     color: whitesmoke;
 }
+
+a{
+    color:aqua;
+}
+
+a:visited{
+    color: lightblue;
+}
+
+a:hover,a:active{
+    color: violet;
+}
